style(inquiry):梳理代码